[tool.poetry]
name = "my_krml_24542250"
version = "0.0.0"
description = "A package for doing great things!"
authors = ["Thuso Dube"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
